@@ -16,9 +16,7 @@ end
 
 function should_hide_armok(cmdline)
     local command = get_command(cmdline)
-    return dfhack.getHideArmokTools() and
-            helpdb.is_entry(command) and
-            helpdb.get_entry_tags(command).armok
+    return dfhack.getHideArmokTools() and helpdb.has_tag(command, 'armok')
 end
 
 -- ----------------- --
